# AdvancedAnalytics

./: .gitignore  README.md  data_clean2.py  eda_report.aux  eda_report.out  eda_report.tex  eda_report.toc  eda_transactions.py  eda_transactions_advanced.py  fix_script.py  post_processing.py  update_script.py
.ipynb_checkpoints/: data_clean2-checkpoint.py  eda_transactions-checkpoint.py
Code/: preprocess.py  split.py
Data/processed/: minifigs_clean.csv  test.json  train.json  val.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
models/: Catboost.py  LightGBM_Matthias  catboost_Vince.py  ensemble_Vince.py  hurdle_lightgbm_advanced.py  lightGBM_advanced_Matthias  lightgbm_Vince.py  lightgbm_advanced_cleaned.py  model_Vince.py  old_lightgbm_Matthias.py  old_lightgbm_Vince.py  xgboost_Vince.py
models/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
raglooker/: app.py  inspect_db.py  pyproject.toml  recommender.py  test_embed.py
raglooker/static/: app.js
raglooker/templates/: index.html
report/: .gitignore  GuidelineReport.md  main.tex  references.bib  title.tex
report/chapters/: 1.tex  (+6 more)
scratch/: fix_latex_macros.py  fix_underscores.py  format_1_tex.py  format_1_tex_part2.py  make_fig18_bigger.py  make_figures_bigger.py
task1/: eda_transactions.py  eda_transactions_advanced.py  post_processing.py
task2/: task2final.py
task3/: report_task3.md
task4/: Cypher_Queries_Reference.md
(+15 files in other folders)
