[project]
name = "raglooker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "ollama>=0.6.0",
    "rank-bm25>=0.2.2",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
    "google-genai>=0.2.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.26.0",
]
